--- a/package.json
+++ b/package.json
@@ -3,7 +3,11 @@
   "version": "0.1.0",
   "private": true,
   "devDependencies": {
-    "react-scripts": "0.8.5"
+    "enzyme": "^3.10.0",
+    "enzyme-adapter-react-15": "^1.4.0",
+    "react-addons-test-utils": "^15.6.2",
+    "react-scripts": "0.8.5",
+    "react-test-renderer": "^15.6.2"
   },
   "dependencies": {
     "axios": "^0.19.0",
