--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "enzyme-adapter-react-15": "^1.4.0",
     "react-addons-test-utils": "^15.6.2",
     "react-scripts": "0.8.5",
-    "react-test-renderer": "^15.6.2"
+    "react-test-renderer": "^15.6.2",
+    "redux-mock-store": "^1.5.3"
   },
   "dependencies": {
     "axios": "^0.19.0",
