--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "devDependencies": {
     "enzyme": "^3.10.0",
     "enzyme-adapter-react-15": "^1.4.0",
+    "moxios": "^0.4.0",
     "react-addons-test-utils": "^15.6.2",
     "react-scripts": "0.8.5",
     "react-test-renderer": "^15.6.2",
